Actividad del Amazonas

--- a/SR1.html
+++ b/SR1.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEST 1</title>
 </head>
+
 <body>
-    <a href="SR2.html">Enlace a SR2</a> 
-    <h1>UT - SM31</h1>
+    <a href="SR2.html">Enlace a SR2</a>
+    <center>UT - SM31</center>
+    <center>
+        <h1>Las especies más peligrosas del amazonas</h1>
+    </center>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque et venenatis nisi, ut ultrices libero.
+        Donec malesuada vulputate quam nec cursus. Curabitur bibendum massa vel lacinia facilisis.
+        Quisque rhoncus lacus vel risus pulvinar, ac tristique nulla blandit. Mauris rutrum felis eget iaculis semper.
+        Nunc sed mi in sapien tempus molestie. Donec vel felis massa.
+        Cras dictum condimentum pharetra. Aenean scelerisque odio eleifend, ullamcorper erat quis, convallis ipsum.
+        Donec pharetra dui mauris, non ultricies mauris bibendum a.
+        Nunc ultrices fringilla magna, ac auctor lectus vestibulum id.</p>
+
+    <center>
+        <h2>Anaconda Verde (Eunectes Marinus)</h2>
+        <img src="./amazonas.png" width="40%px" height="40%" alt="Foto de Anaconda" />
+    </center>
+    <center>
+    <a href="https://es.wikipedia.org/wiki/Eunectes_murinus#:~:text=La%20anaconda%20verde%20o%20com%C3%BAn,r%C3%ADos%20del%20tr%C3%B3pico%20de%20Sudam%C3%A9rica.">Más Información</a>
+    </center>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Duis velit metus, consectetur quis elit placerat, venenatis lobortis nulla. Proin efficitur orci nulla, eu
+        efficitur mi tristique eu.
+        Suspendisse sed purus dapibus, rhoncus neque nec, facilisis urna. Quisque et eros risus. Ut in nunc dui.
+        Maecenas sit amet turpis a purus molestie interdum eget quis orci. In nec consequat ligula. Aliquam.</p>
+    <h3>Color</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis aut quibusdam accusantium incidunt odio vero
+        libero nobis ipsa dolores, reprehenderit animi quis blanditiis voluptate sapiente totam adipisci atque. Est,
+        repellat.</p>
+    <h3>Peso</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium molestias temporibus deleniti adipisci
+        veniam fugiat blanditiis error aperiam dolore numquam maiores, sed voluptates omnis aut eius. Quas eum
+        consectetur laudantium!</p>
+    <h3>Longitud</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, incidunt modi deserunt nam tenetur minus!
+        Iusto dolorum iste ex excepturi possimus vero blanditiis, laborum illo amet vitae non minus qui!</p>
+    <h3>Dieta</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore consequatur officia facilis at. Esse consequatur
+        vitae illo voluptate doloremque perspiciatis molestias commodi unde sapiente quo est, in amet? Nesciunt, fugit?
+    </p>
+    <div
+    class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+    <div class="text-white mb-3 mb-md-0">
+      Copyright © 2024. All rights reserved.
+    </div>
 </body>
+
 </html>
