FOrmulario y mi presentación

--- a/SR2.html
+++ b/SR2.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEST 2</title>
 </head>
+
 <body>
-    <a href="SR3.html">Enlace a SR3</a> 
-    <h1>UT - SM31</h1>
+    <a href="SR3.html">Enlace a SR3</a>
+    <center>UT - SM31</center>
+    <h1>Formularios</h1>
+    <form action="">
+        <label for="">Este es el input</label>
+        <input type="text"><br>
+        <label for="">Textarea</label>
+        <textarea name="" id=""></textarea><br>
+        <label for="">Elemento Select</label>
+        <select name="" id="">
+            <option value="">Opción 1</option>
+            <option value="">Opción 2</option>
+            <option value="">Opción 3</option>
+            <option value="">Opción 4</option>
+        </select>
+    </form>
+<!--Profundizando el elemento input-->
+<h2>Profundizando el elemento input</h2>
+    <form action="">
+        <label for="">Input tipo texto</label>
+        <input type="text" required><br>
+        <label for="">Input tipo telefono</label>
+        <input type="tel" minlength="10" maxlength="12" required><br>
+        <label for="">Input tipo email</label>
+        <input type="email" required><br>
+        <label for="">Input tipo numero</label>
+        <input type="number" required><br>
+        <label for="">Input tipo password</label>
+        <input type="password" required><br>
+
+        <label for="">Input tipo radio</label><br>
+        <input type="radio">Opción 1<br>
+        <input type="radio">Opción 2<br>
+        <input type="radio">Opción 3<br><br>
+
+        <label for="">Tipo Checkbox</label><br>
+        <input type="checkbox">Opción 1<br>
+        <input type="checkbox">Opción 2<br>
+        <input type="checkbox">Opción 3<br><br>
+
+        <label for="">Tipo Checkbox</label><br>
+        <input type="submit" name="EnviarInput" value="Enviar mi">
+        <button type="submit" name="EnviarButton">Enviar</button>
+
+    </form>
 </body>
+
 </html>
