--- a/SR3.html
+++ b/SR3.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEST 3</title>
 </head>
+
 <body>
-    <a href="SR4.html">Enlace a SR4</a> 
-    <h1>UT - SM31</h1>
+    <a href="SR4.html">Enlace a SR4</a>
+    <center>UT - SM31</center>
+    <h1>Mi Presentación</h1>
+
+    <h2>Fotografía</h2>
+    <img src="yo.jpg" width="20%px" height="20%" alt="Foto mía" />
+    <h2>Nombre</h2>
+    <ul type="square">
+        <li>
+            <h3>Yasser Omar Apango Ramos</h3>
+    </ul>
+    <h2>Edad</h2>
+    <ul type="square">
+        <li>
+            <h3>19 años</h3>
+    </ul>
+    <h2>Acerca de mi</h2>
+    <ol>
+        <li>Criticón.</li>
+        <li>Narcisista.</li>
+        <li>Clasista.</li>
+        <li>Cinico.</li>
+        <li>Callado al principio.</li>
+        <li>Burlón</li>
+        <li>Olvidadizo.</li>
+        <li>Perfeccionista</li>
+        <li>Buena persona cuando no ando de malas (siempre ando de malas).</li>
+        <li>Casi siempre sin dinero (¿alguien quiere ser mi nómina personal?)</li>
+    </ol>
+    <h2>Mis comidas favoritas</h2>
+    <ul type="circle">
+        <li>Spaguetti</li>
+        <li>Tlayudas</li>
+        <li>Leche y chocolate en polvo</li>
+        <li>Muffins de chocolate</li>
+        <li>Oreos</li>
+        <li>Cremax y Suavicremas (es casi lo mismo)</li>
+    </ul>
+    <ul>
+        <s>tengo un vicio con el azucar.</s>
+    </ul>
+    <h2>Mis artistas y bandas musicales favoritas</h2>
+    <ul type="circle">
+        <li>No tengo (me gusta el Electroswim pero eso ya es un sub-genero musical).
+    </ul>
+    <h2>Formulario de Contacto:</h2>
+    <form action="">
+        <label for="">Nombre: </label>
+        <input type="text" required>
+        <label for="">Apellido: </label>
+        <input type="text" required><br>
+        <label for="">No. de telefono</label>
+        <input type="tel" minlength="10" maxlength="12" required>
+        <label for="">Correo (@): </label>
+        <input type="email" required>
+        <label for="">Edad: </label>
+        <input type="number" required><br>
+        <label for="">Mensaje: </label>
+        <textarea name="" id=""></textarea><br>
+        <input type="submit" name="EnviarInput" value="Enviar mi">
+    </form>
 </body>
+
 </html>
