--- a/SR3.html
+++ b/SR3.html
@@ -13,7 +13,7 @@
     <h1>Mi Presentación</h1>
 
     <h2>Fotografía</h2>
-    <img src="yo.jpg" width="20%px" height="20%" alt="Foto mía" />
+    <img src="yo1.jpg" width="20%px" height="20%" alt="Foto mía" />
     <h2>Nombre</h2>
     <ul type="square">
         <li>
@@ -55,17 +55,17 @@
     </ul>
     <h2>Formulario de Contacto:</h2>
     <form action="">
-        <label for="">Nombre: </label>
-        <input type="text" required>
-        <label for="">Apellido: </label>
+        <label for="">Nombre: </label><br>
         <input type="text" required><br>
-        <label for="">No. de telefono</label>
-        <input type="tel" minlength="10" maxlength="12" required>
-        <label for="">Correo (@): </label>
-        <input type="email" required>
-        <label for="">Edad: </label>
+        <label for="">Apellido: </label><br>
+        <input type="text" required><br>
+        <label for="">No. de telefono</label><br>
+        <input type="tel" minlength="10" maxlength="12" required><br>
+        <label for="">Correo (@): </label><br>
+        <input type="email" required><br>
+        <label for="">Edad: </label><br>
         <input type="number" required><br>
-        <label for="">Mensaje: </label>
+        <label for="">Mensaje: </label><br>
         <textarea name="" id=""></textarea><br>
         <input type="submit" name="EnviarInput" value="Enviar mi">
     </form>
